@@ -21,11 +21,7 @@
 
 package com.gallery.GalleryRemote;
 
-import java.awt.Color;
-import java.awt.Dimension;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Insets;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.io.*;
@@ -41,6 +37,7 @@ import com.gallery.GalleryRemote.prefs.PreferenceNames;
 import com.gallery.GalleryRemote.prefs.PropertiesFile;
 import com.gallery.GalleryRemote.util.GRI18n;
 import com.gallery.GalleryRemote.util.DialogUtil;
+import com.gallery.GalleryRemote.util.BrowserLink;
 
 /**
  *  Update check and dialog
@@ -72,7 +69,7 @@ public class Update extends JFrame implements ActionListener, PreferenceNames {
 	JTextArea jVersion = new JTextArea();
 	JTextArea jDate = new JTextArea();
 	JTextPane jReleaseNotes = new JTextPane();
-	JTextArea jUrl = new JTextArea();
+	BrowserLink jUrl = new BrowserLink();
 	JButton jBrowse = new JButton();
 
 	public int check(boolean showImmediate) {
@@ -161,7 +158,7 @@ public class Update extends JFrame implements ActionListener, PreferenceNames {
 		this.setTitle(grRes.getString(MODULE, "title"));
 		this.getContentPane().setLayout(gridBagLayout1);
 
-		jLabel1.setFont(new java.awt.Font("Dialog", 1, 16));
+		jLabel1.setFont(UIManager.getFont( "Label.font" ).deriveFont(Font.BOLD, 16));
 		jLabel1.setText(grRes.getString(MODULE, "newVerAvail"));
 		jLabel2.setText(grRes.getString(MODULE, "ver"));
 		jLabel3.setText(grRes.getString(MODULE, "relDate"));
@@ -172,27 +169,27 @@ public class Update extends JFrame implements ActionListener, PreferenceNames {
 
 		jDate.setBackground(UIManager.getColor("TextField.inactiveBackground"));
 		jDate.setEditable(false);
-		jDate.setFont(new java.awt.Font("SansSerif", 0, 11));
+		jDate.setFont(UIManager.getFont( "Label.font" ));
 		if (which.releaseDate != null) jDate.setText(DateFormat.getDateInstance().format(which.releaseDate));
 
 		jBrowse.setText(grRes.getString(MODULE, "openInBrwsr"));
 		jBrowse.addActionListener(this);
 
 		jReleaseNotes.setEditable(false);
-		jReleaseNotes.setFont(new java.awt.Font("SansSerif", 0, 11));
+		jReleaseNotes.setFont(UIManager.getFont( "Label.font" ));
 		jReleaseNotes.setPreferredSize(new Dimension(520, 250));
 		jReleaseNotes.setMargin(new Insets(0, 3, 3, 3));
 		if (which.releaseNotes != null) jReleaseNotes.setText(which.releaseNotes);
 
-		jUrl.setBackground(UIManager.getColor("TextField.inactiveBackground"));
-		jUrl.setEditable(false);
-		jUrl.setFont(new java.awt.Font("SansSerif", 0, 11));
-		jUrl.setForeground(Color.blue);
+		//jUrl.setBackground(UIManager.getColor("TextField.inactiveBackground"));
+		//jUrl.setEditable(false);
+		//jUrl.setFont(new java.awt.Font("SansSerif", 0, 11));
+		//jUrl.setForeground(Color.blue);
 		if (which.releaseUrl != null) jUrl.setText(which.releaseUrl);
 
 		jVersion.setBackground(UIManager.getColor("TextField.inactiveBackground"));
 		jVersion.setEditable(false);
-		jVersion.setFont(new java.awt.Font("SansSerif", 0, 11));
+		jVersion.setFont(UIManager.getFont( "Label.font" ));
 		if (which.version != null) jVersion.setText(which.version);
 
 		this.getContentPane().add(jLabel1,       new GridBagConstraints(0, 0, 3, 1, 0.0, 0.0
