@@ -361,3 +361,20 @@ UploadProgress.Error = Error
 # Gallery model
 Gallery.logoutQuestion = Logging out will lose all the work you have performed on this Gallery. You may want to save first.\n\nLog out anyway?
 Gallery.logoutQuestion.title = Warning
+
+# ImageUtils
+ImageUtils.warningTitle=Warning
+ImageUtils.warningOK=OK
+ImageUtils.warningDontShow=Don't display this warning again
+ImageUtils.warningTextIM=<html>An optional part of Gallery Remote, <b>ImageMagick</b>, could not be found<br>\
+		or is malfunctionning. Gallery Remote will not be able to resize images before<br>\
+		uploading them, and loading thumbnails and previews will be much slower.<br>\
+		You can find out how to fix this by going to this page:
+ImageUtils.warningUrlIM=http://gallery.menalto.com/modules.php?op=modload&name=GalleryDocs&file=index&page=gallery-remote.problems.php
+ImageUtils.warningUrlTextIM=Gallery Remote Known Problems
+ImageUtils.warningTextJpegtran=<html>An optional part of Gallery Remote, <b>jpegtran</b>, could not be found<br>\
+		or is malfunctionning. Gallery Remote will not be able to rotate images before<br>\
+		uploading them.<br>\
+		You can find out how to fix this by going to this page:
+ImageUtils.warningUrlJpegtran=http://gallery.menalto.com/modules.php?op=modload&name=GalleryDocs&file=index&page=gallery-remote.problems.php
+ImageUtils.warningUrlTextJpegtran=Gallery Remote Known Problems
