@@ -93,6 +93,10 @@ inspectorDividerLocation=300
 # GR UI language: use the standard language_COUNTRY, such as fr_FR, it_IT, en_US, etc
 uiLocale=
 
+# Warning windows for jpegtran and IM
+suppressWarningIM=false
+suppressWarningJpegtran=false;
+
 #
 # --- Technical ---
 #
@@ -128,6 +132,6 @@ updateUrlBeta=http://gallery.sourceforge.net/gallery_remote_version_check_beta.p
 #
 # --- Do not edit below this line ---
 #
-version=1.2.1-b2
-releaseDate=2003/12/16
+version=1.2.1-b3
+releaseDate=2003/12/17
 aboutText=Gallery Remote\n \n \nA part of the Gallery Open-Source Project\nhttp://gallery.sourceforge.net\n \n \nMaintained by:\n \nPierre-Luc Paour\nAmedeo Paglione\nChris Schwerdt\n \n \nInitial version by Chris Smith\n \n \nContributors:\n \nTim Miller\nDolan Halbrook\nMarkus Cozowicz\n \n \nArtwork by Ross A. Reyman\n \n \nBundled software:\n \nImageMagick\nJSX\nJava look and feel Graphics Repository icons\njpegtran, Guido Vollbeding's version\nMetadataExtractor
